JMeter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jmeter-master
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jmeter-master
  template:
    metadata:
      labels:
        app: jmeter-master
    spec:
      containers:
      - name: jmeter-master
        image: justb4/jmeter
        ports:
        - containerPort: 1099
        - containerPort: 60000
        - containerPort: 4445
        command: ["jmeter-server"]
        args: ["-Dserver.rmi.localport=60000", "-Dserver.rmi.ssl.disable=true", "-Dserver_port=1099", "-Jclient.rmi.localport=4445"]
---
apiVersion: v1
kind: Service
metadata:
  name: jmeter-master
spec:
  selector:
    app: jmeter-master
  ports:
    - name: rmi-registry
      protocol: TCP
      port: 1099
      targetPort: 1099
    - name: rmi
      protocol: TCP
      port: 60000
      targetPort: 60000
    - name: jmeter-client
      protocol: TCP
      port: 4445
      targetPort: 4445
  clusterIP: None
