deploy-login.yaml
piVersion: apps/v1
kind: Deployment
metadata:
  name: myhomegym-login-web
  labels:
    app: myhomegym-login
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myhomegym-login
  template:
    metadata:
      labels:
        app: myhomegym-login
    spec:
      containers:
      - image: ysryu/nginx:v9.0.90
        name: web
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "250m"
            memory: "250Mi"
          limits:
            memory: "250Mi"
            cpu: "250m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: svc-login-web
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30100
  selector:
    app: myhomegym-login
