deploy-sign.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myhomegym-sign-web
  labels:
    app: myhomegym-sign
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myhomegym-sign
  template:
    metadata:
      labels:
        app: myhomegym-sign
    spec:
      containers:
      - image: kku9/nginx-sign-web:v1.0
        name: web-sign
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "250m"
            memory: "250Mi"
          limits:
            memory: "250Mi"
            cpu: "250m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: svc-sign-web
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30200
  selector:
    app: myhomegym-sign
