deploy-was.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-was
  labels:
    app: myhomegym-was
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myhomegym-was
  template:
    metadata:
      labels:
        app: myhomegym-was
    spec:
      containers:
      - name: was
        image: kku9/nginx-was:v1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "500Mi"
          limits:
            cpu: "250m"
            memory: "500Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: svc-was
spec:
  type: ClusterIP
  clusterIP: 10.110.0.100
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: myhomegym-was
