nginx-login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-login
  labels:
    app: nginx-login
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-login
  template:
    metadata:
      labels:
        app: nginx-login
    spec:
      containers:
      - name: nginx
        image: ysryu/nginx-login:v1.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "250m"
            memory: "250Mi"
          limits:
            cpu: "250m"
            memory: "250Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: svc-login
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30300
    protocol: TCP
  selector:
    app: nginx-login
