nginx-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-main
  labels:
    app: nginx-main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-main
  template:
    metadata:
      labels:
        app: nginx-main
    spec:
      containers:
      - name: web
        image: ysryu/nginx-main:v1.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "250m"
            memory: "250Mi"
          limits:
            cpu: "250m"
            memory: "250Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1            
---
apiVersion: v1
kind: Service
metadata:
  name: svc-main
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30100
  selector:
    app: nginx-main
