ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myhomegym-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  ingressClassName: nginx  # nginx-ingress 컨트롤러의 클래스 이름
  rules:
  - host: www.watersooo.shop
    http:
      paths:
      - path: /login.jsp
        pathType: Prefix
        backend:
          service:
            name: svc-login
            port:
              number: 8080
      - path: /signup.jsp  # 요청 패스
        pathType: Prefix  # 패스 유형
        backend:
          service:
            name: svc-sign  # 서비스 이름
            port:
              number: 8080 # 서비스 포트
      - path: /index.jsp
        pathType: Prefix
        backend:
          service:
            name: svc-main
            port:
              number: 8080
